--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -4,7 +4,44 @@ body {
   font-family: $ff-base;
   font-weight: $fw-400;
   font-size: fs(400);
-  color: clr(neutral, 400);
+  color: clr(primary, 900);
   line-height: 1.5;
   
+}
+.app {
+  padding:1rem;
+  
+}
+
+.option-block {
+  padding: 1rem 2rem;
+  cursor: pointer;
+  border-bottom: 0.3px solid rgb(233, 233, 233);
+
+  &:hover {
+    background-color: rgb(204, 232, 248);
+  }
+  
+}
+
+
+input[type="radio"]{
+  display: none;
+
+  
+}
+
+.btn-submit {
+  cursor: pointer;
+  padding: 1rem;
+  width: 200px;
+  background-color: rgb(22, 22, 22);
+  color: white;
+  border: 0.3px solid rgb(233, 233, 233);
+  border-radius: 5px;
+  margin-top: 1rem;
+
+  &:hover {
+    background-color: rgb(48, 48, 48);
+  }
 }
