--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -3,7 +3,7 @@
 body {
   font-family: $ff-base;
   font-weight: $fw-400;
-  font-size: fs(400);
+  font-size: fs(500);
   color: clr(primary, 900);
   line-height: 1.5;
   
@@ -18,30 +18,32 @@ body {
    
 
   &:hover {
-    background-color: rgb(204, 232, 248);
+    background-color: rgb(220, 238, 248);
   }
+
+  &:has(input[type="radio"]:checked){
+    background-color: rgb(21, 153, 230);
+    }
   
 }
 
 
-// input[type="radio"]{
-//   display: none;
+input[type="radio"]{
+  display: none;
 
   
-// }
-
-input[type="radio"]:checked+label{
-background-color: red;
 }
+
+
 
 label {
   display: block;
   padding: 1rem;
-  border-bottom: 0.3px solid rgb(233, 233, 233);
   width: 100%;
   height: 100%;
   cursor: pointer;
-  // border: 1px solid red;
+    // border-bottom: 0.3px solid rgb(233, 233, 233);
+
   
 }
 
