--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -78,3 +78,11 @@ label {
     background-color: rgb(48, 48, 48);
   }
 }
+
+.btn-submit.correct{
+  background-color: rgb(6, 139, 84);
+}
+
+.btn-submit.incorrect{
+  background-color: rgb(168, 32, 14);
+}
