--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -3,7 +3,7 @@
 body {
   font-family: $ff-base;
   font-weight: $fw-400;
-  font-size: fs(500);
+  font-size: fs(600);
   color: clr(primary, 900);
   line-height: 1.5;
   
@@ -12,6 +12,8 @@ body {
 
 .app {
   padding:1rem;
+  max-width: 1100px;
+ 
   
 }
 
