--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -29,9 +29,10 @@ body {
 .score {
   font-size: fs(600);
   padding: 1rem;
-  border: 1px solid rgb(202, 202, 202);
+  // border: 1px solid rgb(202, 202, 202);
   border-radius: 10px;
 }
+
 
 .option-block {
   padding: 1rem;
@@ -61,7 +62,7 @@ label {
   width: 100%;
   height: 100%;
   cursor: pointer;
-    // border-bottom: 0.3px solid rgb(233, 233, 233);
+    
 
   
 }
