add correct answer highlighting when selecting wrong answer

--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -47,6 +47,10 @@ body {
   
 }
 
+.option-block.correct-highlight {
+  background-color: rgb(6, 139, 84);
+}
+
 
 input[type="radio"]{
   display: none;
